// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentChatButton: Render Correctly  should match with the previous snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AgentChatButton
    customButton={false}
    handleChatClick={[Function]}
    name="Chat"
    showIcon={false}
    textClassName="sfc1"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <ModalComponent
          customClass=""
          customCloseTrigger={false}
          disabled={false}
          fullView={true}
          hasCustomClose={true}
          hasNoClose={false}
          isTriggerFullView={false}
          isWhiteIcon={true}
          onAfterModalOpen={[Function]}
          onRequestCloseCustom={[Function]}
          trigger={
            <button
              className="sfc1 at_agent_chat_button"
              onClick={[Function]}
            >
              Chat
            </button>
          }
        >
          <withRouter(Connect(Chat)) />
        </ModalComponent>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <withRouter(Connect(Chat)) />,
          "customClass": "",
          "customCloseTrigger": false,
          "disabled": false,
          "fullView": true,
          "hasCustomClose": true,
          "hasNoClose": false,
          "isTriggerFullView": false,
          "isWhiteIcon": true,
          "onAfterModalOpen": [Function],
          "onRequestCloseCustom": [Function],
          "trigger": <button
            className="sfc1 at_agent_chat_button"
            onClick={[Function]}
          >
            Chat
          </button>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <ModalComponent
            customClass=""
            customCloseTrigger={false}
            disabled={false}
            fullView={true}
            hasCustomClose={true}
            hasNoClose={false}
            isTriggerFullView={false}
            isWhiteIcon={true}
            onAfterModalOpen={[Function]}
            onRequestCloseCustom={[Function]}
            trigger={
              <button
                className="sfc1 at_agent_chat_button"
                onClick={[Function]}
              >
                Chat
              </button>
            }
          >
            <withRouter(Connect(Chat)) />
          </ModalComponent>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <withRouter(Connect(Chat)) />,
            "customClass": "",
            "customCloseTrigger": false,
            "disabled": false,
            "fullView": true,
            "hasCustomClose": true,
            "hasNoClose": false,
            "isTriggerFullView": false,
            "isWhiteIcon": true,
            "onAfterModalOpen": [Function],
            "onRequestCloseCustom": [Function],
            "trigger": <button
              className="sfc1 at_agent_chat_button"
              onClick={[Function]}
            >
              Chat
            </button>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`AgentChatButton: Render Correctly  should show default icon when showIcon props is given 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AgentChatButton
    customButton={false}
    handleChatClick={[Function]}
    name="Chat"
    showIcon={true}
    textClassName="sfc1"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="input-24 mr8"
        >
          <IconSvg />
        </span>,
        <ModalComponent
          customClass=""
          customCloseTrigger={false}
          disabled={false}
          fullView={true}
          hasCustomClose={true}
          hasNoClose={false}
          isTriggerFullView={false}
          isWhiteIcon={true}
          onAfterModalOpen={[Function]}
          onRequestCloseCustom={[Function]}
          trigger={
            <button
              className="sfc1 at_agent_chat_button"
              onClick={[Function]}
            >
              Chat
            </button>
          }
        >
          <withRouter(Connect(Chat)) />
        </ModalComponent>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <IconSvg />,
          "className": "input-24 mr8",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <withRouter(Connect(Chat)) />,
          "customClass": "",
          "customCloseTrigger": false,
          "disabled": false,
          "fullView": true,
          "hasCustomClose": true,
          "hasNoClose": false,
          "isTriggerFullView": false,
          "isWhiteIcon": true,
          "onAfterModalOpen": [Function],
          "onRequestCloseCustom": [Function],
          "trigger": <button
            className="sfc1 at_agent_chat_button"
            onClick={[Function]}
          >
            Chat
          </button>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="input-24 mr8"
          >
            <IconSvg />
          </span>,
          <ModalComponent
            customClass=""
            customCloseTrigger={false}
            disabled={false}
            fullView={true}
            hasCustomClose={true}
            hasNoClose={false}
            isTriggerFullView={false}
            isWhiteIcon={true}
            onAfterModalOpen={[Function]}
            onRequestCloseCustom={[Function]}
            trigger={
              <button
                className="sfc1 at_agent_chat_button"
                onClick={[Function]}
              >
                Chat
              </button>
            }
          >
            <withRouter(Connect(Chat)) />
          </ModalComponent>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <IconSvg />,
            "className": "input-24 mr8",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <withRouter(Connect(Chat)) />,
            "customClass": "",
            "customCloseTrigger": false,
            "disabled": false,
            "fullView": true,
            "hasCustomClose": true,
            "hasNoClose": false,
            "isTriggerFullView": false,
            "isWhiteIcon": true,
            "onAfterModalOpen": [Function],
            "onRequestCloseCustom": [Function],
            "trigger": <button
              className="sfc1 at_agent_chat_button"
              onClick={[Function]}
            >
              Chat
            </button>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
